refactor: rename patch and put funcs
