# src/models/dto/replace-task-dto.ts
@@ -1,26 +1,22 @@
 import {
   IsIn,
   IsNotEmpty,
-  IsOptional,
   IsString,
   MaxLength,
 } from 'class-validator';
 
-export default class UpdateTaskPartiallyDto {
+export default class ReplaceTaskDto {
   @IsString()
   @IsNotEmpty()
   @MaxLength(255)
-  @IsOptional()
   public title!: string;
 
   @IsString()
   @IsNotEmpty()
   @MaxLength(255)
-  @IsOptional()
   public description!: string;
 
   @IsString()
   @IsIn(['pending', 'in progress', 'done'])
-  @IsOptional()
   public status!: 'pending' | 'in progress' | 'done';
 }
