# src/validators/task.validator.ts
@@ -1,8 +1,8 @@
 import { Request, Response } from 'express';
 import CreateTaskDto from '../models/dto/create-task.dto';
 import FindAllTaskDto from '../models/dto/find-all-task.dto';
+import ReplaceTaskDto from '../models/dto/replace-task-dto';
 import UpdateTaskDto from '../models/dto/update-task-dto';
-import UpdateTaskPartiallyDto from '../models/dto/update-task-partially-dto';
 import validate from '../utils/validate';
 
 export default class TaskValidator {
@@ -37,12 +37,12 @@ export default class TaskValidator {
     }
   }
 
-  public static async update(req: Request, res: Response, next: Function): Promise<Response> {
+  public static async replace(req: Request, res: Response, next: Function): Promise<Response> {
     if (Number.isNaN(parseInt(req.params.id, 10))) {
       return res.status(404).json({ message: 'Task not found' });
     }
     try {
-      const errors = await validate(UpdateTaskDto, req.body);
+      const errors = await validate(ReplaceTaskDto, req.body);
       if (errors.length > 0) {
         return res.status(422).json(errors);
       }
@@ -52,14 +52,12 @@ export default class TaskValidator {
     }
   }
 
-  public static async updatePartially(
-    req: Request, res: Response, next: Function,
-  ): Promise<Response> {
+  public static async update(req: Request, res: Response, next: Function): Promise<Response> {
     if (Number.isNaN(parseInt(req.params.id, 10))) {
       return res.status(404).json({ message: 'Task not found' });
     }
     try {
-      const errors = await validate(UpdateTaskPartiallyDto, req.body);
+      const errors = await validate(UpdateTaskDto, req.body);
       if (errors.length > 0) {
         return res.status(422).json(errors);
       }
